# arcdps_reporter

./: .gitignore  Cargo.toml  README.md  llms.txt
.serena/: project.yml
.serena/memories/: available_tools.md  build_commands.md  code_style.md  project_purpose.md  project_structure.md  suggested_commands.md  task_completion.md  tech_stack.md
memories/: example_memory.md
src/: combat_event_schema.rs  http_client.rs  lib.rs  test_plugin.rs
