


[package]
name = "arcdps_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
arcdps = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test_plugin"
path = "src/test_plugin.rs"


